--- a/src/styles/components/_singlecard.scss
+++ b/src/styles/components/_singlecard.scss
@@ -53,7 +53,7 @@
 
 @media only screen and (max-width: 768px) {
   .single-card-section {
-    padding: 1.5em 0;
+    padding: 1em;
 
     & > div {
       padding: 6em 3em;
